Found and corrected overflowing image

--- a/style.css
+++ b/style.css
@@ -88,7 +88,8 @@ h1, h2, h3, li {
     text-align: center;
 }
 
-.hero img {
+.hero img,
+.fyi img {
     width: 100%;
 }
 
